...
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary" />

        <SearchView
            android:id="@+id/main_activity_search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="-20dp"
            android:iconifiedByDefault="false"
            android:paddingRight="15dp"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{viewModel.hideProgressBar ? View.GONE : View.VISIBLE}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_activity_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:visibility="@{viewModel.hideRecyclerView ? View.GONE : View.VISIBLE}" />

        <TextView
...
