...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/activity_details_image_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/pixo_search_large_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logo_square" />
...
